product page form-label spacing fix.

--- a/assets/scss/BP/productView-default.scss
+++ b/assets/scss/BP/productView-default.scss
@@ -154,6 +154,8 @@
             margin-bottom: 16px;
             letter-spacing: 0.1em;
             position: relative;
+            left : 0;
+            padding: 0;
         }
         .form {
             .form-field {
